tests/negative/continue_typical.em
int main() {
    if (true) {
        continue;
    }
    return 0;
}